@@ -1,9 +1,12 @@
+package me.cl;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Save01 {
 
@@ -22,8 +25,12 @@ public class Save01 {
             data.add(arr);
         }
 
-        List<int[]> front = data.stream().filter(item -> item[0] <= item[1]).sorted(Comparator.comparingInt(o -> o[0])).toList();
-        List<int[]> rear = data.stream().filter(item -> item[0] > item[1]).sorted((o1, o2) -> o2[1] - o1[1]).toList();
+        List<int[]> front = data.stream().filter(item -> item[0] <= item[1])
+                .sorted(Comparator.comparingInt(o -> o[0]))
+                .collect(Collectors.toList());
+        List<int[]> rear = data.stream()
+                .filter(item -> item[0] > item[1]).sorted((o1, o2) -> o2[1] - o1[1])
+                .collect(Collectors.toList());
 
         int a = 0, total = 0;
         for (int[] item : front) {
